# api/swagger.yaml
@@ -489,6 +489,30 @@ paths:
         404:
           description: "User not found"
       x-swagger-router-controller: "User"
+  /user/reserve/{eventID}:
+    get:
+      tags:
+      - "user"
+      summary: "Reserve an event"
+      description: "Reserve an event"
+      operationId: "reserveByEventID"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "eventID"
+        in: "path"
+        description: "ID of event to return"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+        401:
+          description: "Not logged in"
+        404:
+          description: "Error"
+      x-swagger-router-controller: "User"
   /user/login:
     post:
       tags:
